--- a/BMX055/Debug/makefile
+++ b/BMX055/Debug/makefile
@@ -66,7 +66,7 @@ main-build: BMX055.elf secondary-outputs
 
 # Tool invocations
 BMX055.elf BMX055.map: $(OBJS) $(USER_OBJS) C:\Users\luis0\STM32CubeIDE\workspace_1.9.0\BMX055-STM32F4\BMX055\STM32F411CEUX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "BMX055.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\luis0\STM32CubeIDE\workspace_1.9.0\BMX055-STM32F4\BMX055\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMX055.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "BMX055.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\luis0\STM32CubeIDE\workspace_1.9.0\BMX055-STM32F4\BMX055\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMX055.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
